--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 *.gz
 
 build
-form5500/.DS_Store
-form5500/debug
-form5500/build
-form5500/internal/.DS_Store
-form5500/form5500
+.DS_Store
+debug
+build
+internal/.DS_Store
+form5500
+form5500-data-sets-import
