--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ phases:
   install:
     commands:
       # get and install dependencies
+      - go get github.com/lib/pq && go install github.com/lib/pq
       - go get github.com/fiduciary-benchmarks/form5500/internal/utils && go install github.com/fiduciary-benchmarks/form5500/internal/utils
       - ls /go/src
   build:
