--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
       # get and install dependencies
       - go get github.com/lib/pq && go install github.com/lib/pq
       - go get github.com/fiduciary-benchmarks/form5500/internal/utils && go install github.com/fiduciary-benchmarks/form5500/internal/utils
+      - go get github.com/andygrunwald/go-jira && go install github.com/andygrunwald/go-jira
       - ls /go/src
   build:
     commands:
