remove change that started breaking codebuild

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   install:
     commands:
       # get and install dependencies
-      - go get github.com/lib/pq && go install github.com/lib/pq
+      #- go get github.com/lib/pq && go install github.com/lib/pq
       - go get github.com/fiduciary-benchmarks/form5500/internal/utils && go install github.com/fiduciary-benchmarks/form5500/internal/utils
       - go get github.com/andygrunwald/go-jira && go install github.com/andygrunwald/go-jira
       - ls /go/src
